--- a/public/css/app.css
+++ b/public/css/app.css
@@ -105,6 +105,10 @@ body {
   overflow-x: hidden;
 }
 
+a {
+  text-decoration: none !important;
+}
+
 nav {
   position: fixed;
   top: 0;
@@ -148,14 +152,13 @@ main .card {
 
 .user {
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  gap: 10pt;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 20pt;
 }
 .user img {
-  width: 60pt;
-  height: 60pt;
-  border-radius: 100%;
+  width: 100pt;
+  height: 100%;
 }
 .user .info {
   flex-grow: 1;
@@ -164,10 +167,14 @@ main .card {
   align-items: flex-start;
   justify-content: space-between;
 }
-.user .info h2 {
+.user .info h1 {
   width: 100%;
   text-align: right;
+  font-size: 30pt;
 }
-.user .info h2 span {
+.user .info h1 span {
   font-size: 12pt;
+}
+.user .info h2 {
+  font-size: 20pt;
 }
