--- a/resources/sass/_layout.scss
+++ b/resources/sass/_layout.scss
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: none;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+    scrollbar-width: none;
 }
 
 html,
@@ -46,7 +51,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 
     .card {
         width: 100%;
