--- a/public/css/app.css
+++ b/public/css/app.css
@@ -229,3 +229,20 @@ form .submitContainer {
 .user .info h2 {
   font-size: 20pt;
 }
+
+.exchange-rates {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+.exchange-rates .card {
+  padding: 20pt;
+  width: auto;
+  margin: 20pt;
+}
+.exchange-rates .card * {
+  text-align: center;
+}
