--- a/resources/sass/components/_users.scss
+++ b/resources/sass/components/_users.scss
@@ -32,3 +32,21 @@
     }
 
 }
+
+.exchange-rates {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+
+    .card {
+        padding: 20pt;
+        width: auto;
+        margin: 20pt;
+        * {
+            text-align: center;
+        }
+    }
+}
